add: migrations, lint, ci, entities, docker